Fixes scrollbar glitch.

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   background: #181818;
   margin: 0;
   min-height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
